fix docker compose local, some colors for highlighted code, and fix vertical align of inline codeblocks

--- a/site/themes/arangodb-docs-theme/static/css/chroma-relearn-light.css
+++ b/site/themes/arangodb-docs-theme/static/css/chroma-relearn-light.css
@@ -8,59 +8,59 @@
 /* LineNumbersTable */ .chroma .lnt { margin-right: 0.4em; padding: 0 0.4em 0 0.4em;color: #7f7f7f }
 /* LineNumbers */ .chroma .ln { margin-right: 0.4em; padding: 0 0.4em 0 0.4em;color: #7f7f7f }
 /* Keyword */ .chroma .k { color: #204a87; font-weight: bold }
-/* KeywordConstant */ .chroma .kc { color: #204a87; font-weight: bold }
+/* KeywordConstant */ .chroma .kc { color: #204a87;  }
 /* KeywordDeclaration */ .chroma .kd { color: #204a87; font-weight: bold }
 /* KeywordNamespace */ .chroma .kn { color: #204a87; font-weight: bold }
 /* KeywordPseudo */ .chroma .kp { color: #204a87; font-weight: bold }
 /* KeywordReserved */ .chroma .kr { color: #204a87; font-weight: bold }
 /* KeywordType */ .chroma .kt { color: #204a87; font-weight: bold }
-/* Name */ .chroma .n { color: #000000 }
+/* Name */ .chroma .n { color: #282525 }
 /* NameAttribute */ .chroma .na { color: #c4a000 }
 /* NameBuiltin */ .chroma .nb { color: #204a87 }
 /* NameBuiltinPseudo */ .chroma .bp { color: #3465a4 }
-/* NameClass */ .chroma .nc { color: #000000 }
-/* NameConstant */ .chroma .no { color: #000000 }
+/* NameClass */ .chroma .nc { color: #282525 }
+/* NameConstant */ .chroma .no { color: #282525 }
 /* NameDecorator */ .chroma .nd { color: #5c35cc; font-weight: bold }
 /* NameEntity */ .chroma .ni { color: #ce5c00 }
 /* NameException */ .chroma .ne { color: #cc0000; font-weight: bold }
-/* NameFunction */ .chroma .nf { color: #000000 }
-/* NameFunctionMagic */ .chroma .fm { color: #000000 }
+/* NameFunction */ .chroma .nf { color: #282525 }
+/* NameFunctionMagic */ .chroma .fm { color: #282525 }
 /* NameLabel */ .chroma .nl { color: #f57900 }
-/* NameNamespace */ .chroma .nn { color: #000000 }
-/* NameOther */ .chroma .nx { color: #000000 }
-/* NameProperty */ .chroma .py { color: #000000 }
-/* NameTag */ .chroma .nt { color: #204a87; font-weight: bold }
-/* NameVariable */ .chroma .nv { color: #000000 }
-/* NameVariableClass */ .chroma .vc { color: #000000 }
-/* NameVariableGlobal */ .chroma .vg { color: #000000 }
-/* NameVariableInstance */ .chroma .vi { color: #000000 }
-/* NameVariableMagic */ .chroma .vm { color: #000000 }
-/* Literal */ .chroma .l { color: #000000 }
-/* LiteralDate */ .chroma .ld { color: #000000 }
-/* LiteralString */ .chroma .s { color: #4e9a06 }
-/* LiteralStringAffix */ .chroma .sa { color: #4e9a06 }
-/* LiteralStringBacktick */ .chroma .sb { color: #4e9a06 }
-/* LiteralStringChar */ .chroma .sc { color: #4e9a06 }
-/* LiteralStringDelimiter */ .chroma .dl { color: #4e9a06 }
+/* NameNamespace */ .chroma .nn { color: #282525 }
+/* NameOther */ .chroma .nx { color: #004697 }
+/* NameProperty */ .chroma .py { color: #282525 }
+/* NameTag */ .chroma .nt { color: #892f13; }
+/* NameVariable */ .chroma .nv { color: #282525 }
+/* NameVariableClass */ .chroma .vc { color: #282525 }
+/* NameVariableGlobal */ .chroma .vg { color: #282525 }
+/* NameVariableInstance */ .chroma .vi { color: #282525 }
+/* NameVariableMagic */ .chroma .vm { color: #282525 }
+/* Literal */ .chroma .l { color: #282525 }
+/* LiteralDate */ .chroma .ld { color: #282525 }
+/* LiteralString */ .chroma .s { color: #892f13 }
+/* LiteralStringAffix */ .chroma .sa { color: #892f13 }
+/* LiteralStringBacktick */ .chroma .sb { color: #892f13 }
+/* LiteralStringChar */ .chroma .sc { color: #892f13 }
+/* LiteralStringDelimiter */ .chroma .dl { color: #892f13 }
 /* LiteralStringDoc */ .chroma .sd { color: #8f5902; font-style: italic }
-/* LiteralStringDouble */ .chroma .s2 { color: #4e9a06 }
-/* LiteralStringEscape */ .chroma .se { color: #4e9a06 }
-/* LiteralStringHeredoc */ .chroma .sh { color: #4e9a06 }
-/* LiteralStringInterpol */ .chroma .si { color: #4e9a06 }
-/* LiteralStringOther */ .chroma .sx { color: #4e9a06 }
-/* LiteralStringRegex */ .chroma .sr { color: #4e9a06 }
-/* LiteralStringSingle */ .chroma .s1 { color: #4e9a06 }
-/* LiteralStringSymbol */ .chroma .ss { color: #4e9a06 }
-/* LiteralNumber */ .chroma .m { color: #0000cf; font-weight: bold }
-/* LiteralNumberBin */ .chroma .mb { color: #0000cf; font-weight: bold }
-/* LiteralNumberFloat */ .chroma .mf { color: #0000cf; font-weight: bold }
-/* LiteralNumberHex */ .chroma .mh { color: #0000cf; font-weight: bold }
-/* LiteralNumberInteger */ .chroma .mi { color: #0000cf; font-weight: bold }
-/* LiteralNumberIntegerLong */ .chroma .il { color: #0000cf; font-weight: bold }
-/* LiteralNumberOct */ .chroma .mo { color: #0000cf; font-weight: bold }
+/* LiteralStringDouble */ .chroma .s2 { color: #892f13 }
+/* LiteralStringEscape */ .chroma .se { color: #892f13 }
+/* LiteralStringHeredoc */ .chroma .sh { color: #892f13 }
+/* LiteralStringInterpol */ .chroma .si { color: #892f13 }
+/* LiteralStringOther */ .chroma .sx { color: #892f13 }
+/* LiteralStringRegex */ .chroma .sr { color: #892f13 }
+/* LiteralStringSingle */ .chroma .s1 { color: #892f13 }
+/* LiteralStringSymbol */ .chroma .ss { color: #892f13 }
+/* LiteralNumber */ .chroma .m { color: #005081; font-weight: bold }
+/* LiteralNumberBin */ .chroma .mb { color: #005081; font-weight: bold }
+/* LiteralNumberFloat */ .chroma .mf { color: #005081; font-weight: bold }
+/* LiteralNumberHex */ .chroma .mh { color: #005081; font-weight: bold }
+/* LiteralNumberInteger */ .chroma .mi { color: #005081; font-weight: bold }
+/* LiteralNumberIntegerLong */ .chroma .il { color: #005081; font-weight: bold }
+/* LiteralNumberOct */ .chroma .mo { color: #005081; font-weight: bold }
 /* Operator */ .chroma .o { color: #ce5c00; font-weight: bold }
 /* OperatorWord */ .chroma .ow { color: #204a87; font-weight: bold }
-/* Punctuation */ .chroma .p { color: #000000; font-weight: bold }
+/* Punctuation */ .chroma .p { color: #3c434a; }
 /* Comment */ .chroma .c { color: #8f5902; font-style: italic }
 /* CommentHashbang */ .chroma .ch { color: #8f5902; font-style: italic }
 /* CommentMultiline */ .chroma .cm { color: #8f5902; font-style: italic }
@@ -68,16 +68,16 @@
 /* CommentSpecial */ .chroma .cs { color: #8f5902; font-style: italic }
 /* CommentPreproc */ .chroma .cp { color: #8f5902; font-style: italic }
 /* CommentPreprocFile */ .chroma .cpf { color: #8f5902; font-style: italic }
-/* Generic */ .chroma .g { color: #000000 }
+/* Generic */ .chroma .g { color: #282525 }
 /* GenericDeleted */ .chroma .gd { color: #a40000 }
-/* GenericEmph */ .chroma .ge { color: #000000; font-style: italic }
+/* GenericEmph */ .chroma .ge { color: #282525; font-style: italic }
 /* GenericError */ .chroma .gr { color: #ef2929 }
 /* GenericHeading */ .chroma .gh { color: #000080; font-weight: bold }
 /* GenericInserted */ .chroma .gi { color: #00a000 }
-/* GenericOutput */ .chroma .go { color: #000000; font-style: italic }
+/* GenericOutput */ .chroma .go { color: #282525; font-style: italic }
 /* GenericPrompt */ .chroma .gp { color: #8f5902 }
-/* GenericStrong */ .chroma .gs { color: #000000; font-weight: bold }
+/* GenericStrong */ .chroma .gs { color: #282525; font-weight: bold }
 /* GenericSubheading */ .chroma .gu { color: #800080; font-weight: bold }
 /* GenericTraceback */ .chroma .gt { color: #a40000; font-weight: bold }
-/* GenericUnderline */ .chroma .gl { color: #000000; text-decoration: underline }
+/* GenericUnderline */ .chroma .gl { color: #282525; text-decoration: underline }
 /* TextWhitespace */ .chroma .w { color: #f8f8f8; text-decoration: underline }
